--- a/Nivel 1/info.html
+++ b/Nivel 1/info.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Landon Info</title>
     <link href="css/styles.css" rel="stylesheet">
 </head>
+
 <body>
     <div id="main-wrapper">
         <header>
@@ -42,8 +44,8 @@
                         <li>Massage therapy</li>
                         <li>Full service spa</li>
                         <li>In-room jacuzzi tubs</li>
-                        <li>Rooftop café  &amp; smoothie bar</li>
-                        <li>Coffee bar  &amp; pastry shop</li>
+                        <li>Rooftop café &amp; smoothie bar</li>
+                        <li>Coffee bar &amp; pastry shop</li>
                         <li>Traditional continental breakfast</li>
                         <li>24-hour concierge service</li>
                         <li>Business center</li>
@@ -51,7 +53,7 @@
                         <li>Laundry &amp; dry cleaning service</li>
                         <li>Daily paper</li>
                         <li>Certified "green" hotel</li>
-                        <li>Pet-friendly rooms  &amp; common areas</li>
+                        <li>Pet-friendly rooms &amp; common areas</li>
                     </ul>
                 </section>
                 <section class="checklist" id="accessibility">
@@ -66,7 +68,7 @@
                         <li>Wheelchair clearance under sinks &amp; vanity</li>
                         <li>Lower racks in closet</li>
                         <li>TDD machines</li>
-                        <li>Telephone light signalers  &amp; smoke alarms</li>
+                        <li>Telephone light signalers &amp; smoke alarms</li>
                         <li>Telephone amplification handsets</li>
                         <li>Closed captioned television converters</li>
                         <li>Vibrating alarm clocks</li>
@@ -76,7 +78,9 @@
 
                 <section id="greenprogram">
                     <h2>Landon Green Program</h2>
-                    <p><strong>The Landon Hotel - London</strong> was recently renovated, and we considered the impact on the earth the entire way. From green building materials, to solar power, to energy-friendly lighting and appliances throughout the hotel - we’re saving energy in every socket, outlet, and switch. We’ve also initiated a recycling and composting program that reduces the load to local landfills, while providing valuable raw material for use in new products, or in the case of compost, for use in local gardens and landscapes.</p>
+                    <p><strong>The Landon Hotel - London</strong> was recently renovated, and we considered the impact on the earth the entire way. From green building materials, to solar power, to energy-friendly lighting and appliances throughout the hotel
+                        - we’re saving energy in every socket, outlet, and switch. We’ve also initiated a recycling and composting program that reduces the load to local landfills, while providing valuable raw material for use in new products, or in the
+                        case of compost, for use in local gardens and landscapes.</p>
                 </section>
             </article>
         </main>
@@ -84,12 +88,19 @@
         <footer class="scene">
             <div id="socialmedia">
                 <ul class="group">
-                    <li><a href="https://twitter.com"><img class="icon" src="assets/social/twitter.png" alt="icon for twitter"></a></li>
-                    <li><a href="http://www.facebook.com"><img class="icon" src="assets/social/facebook.png" alt="icon for facebook"></a></li>
-                    <li><a href="http://www.youtube.com"><img class="icon" src="assets/social/youtube.png" alt="icon for youtube"></a></li>
+                    <li>
+                        <a href="https://twitter.com"><img class="icon" src="assets/social/twitter.png" alt="icon for twitter"></a>
+                    </li>
+                    <li>
+                        <a href="http://www.facebook.com"><img class="icon" src="assets/social/facebook.png" alt="icon for facebook"></a>
+                    </li>
+                    <li>
+                        <a href="http://www.youtube.com"><img class="icon" src="assets/social/youtube.png" alt="icon for youtube"></a>
+                    </li>
                 </ul>
             </div>
         </footer>
     </div>
 </body>
+
 </html>
